2003-11-11  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkButton.c (ConfigureButton): abort option processing if
	the button was deleted. [Bug #824479]

	* generic/tkMenuDraw.c (TkPostSubmenu): add {} around menu name in
	case it has spaces when calling Tcl_VarEval.  This is a hack until
	this is rewritten for proper Tcl_Obj handling. [Bug #723856]

	* library/tkfbox.tcl (::tk::dialog::file::Update): optimize the
	dir/files list separation by using the -tails, -directory and
	-type option of 'glob'.  Also passes the glob the -filetypes
	filters instead of calling string match over each file.
	[Patch #833819]
	(::tk::dialog::file::ActivateEnt): allow typing filename into
	entry when tk_getOpenFile -multiple 1 is specified. [Bug #788069]

	* generic/tkListbox.c (ListboxDeleteSubCmd, ListboxListVarProc):
	free itemconfig data when removing it from table. [Bug #836483]

	* macosx/tkMacOSXClipboard.c (TkSuspendClipboard, TkSelGetSelection):
	add unicode clipboard support. [Patch #840107] (senn)
	
2003-11-10  Jeff Hobbs  <jeffh@ActiveState.com>

	* win/configure:
	* win/tcl.m4: add necessary ole libs to VC LIBS_GUI line.

	* win/tkWinDraw.c (XFillRectangles): correctly handle the
	XGCValues.function parameter when filling rectangles.
	[Bug #820278] [Patch #820282]

	* win/configure:
	* win/configure.in: define TK_LIB_FLAG, TK_LIB_SPEC,
	TK_BUILD_LIB_SPEC, TK_STUB_LIB_SPEC, TK_STUB_LIB_PATH, and
	TK_BUILD_STUB_LIB_PATH for tkConfig.sh [Bug #826614]

	* unix/Makefile.in (SHLIB_LD_FLAGS): include in Makefile as it is
	used in MAKE_LIB sometimes (ie: AIX-64) [Bug #829686] (jimix)

2003-11-10  Vince Darley <vincentdarley@users.sourceforge.net>

	* generic/tkTextDisp.c: correct yview handling of text widgets 
	containing no vertical pixels at all.
	
2003-11-08  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/tclWinSend.c: Fixed an error returning the registered name.

2003-11-08  Vince Darley <vincentdarley@users.sourceforge.net>

	* tests/textDisp.test: